--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -79,6 +79,9 @@ spec:
             - secretRef:
                 ## kubectl -n stalwart create secret generic litestream-s3 --from-literal=ACCESS_KEY_ID=value --from-literal=SECRET_ACCESS_KEY=value
                 name: litestream-s3
+            - secretRef:
+                ## kubectl -n stalwart create secret generic jmap-oauth --from-literal=OAUTH_KEY=$(yq '.oauth.key' etc/jmap/oauth.toml)
+                name: jmap-oauth
           resources:
             requests:
               cpu: 100m
