statefulset without litestream

--- a/statefulset-litestream.yaml
+++ b/statefulset-litestream.yaml
@@ -13,6 +13,35 @@ spec:
       labels: {}
     spec:
       initContainers:
+        - name: litestream-init
+          image: litestream/litestream:latest
+          command:
+            - /bin/sh
+            - -c
+            - |
+              set -ex
+              ## Install required tools
+              apk add yq
+              ## Try to restore databases
+              DATABASES=$(yq '.dbs[].path' /etc/litestream.yml)
+              for db in $DATABASES; do
+                litestream restore -if-db-not-exists -if-replica-exists $db
+              done
+          volumeMounts: &litestreamVolumeMounts
+            - name: mail-data
+              mountPath: /opt/stalwart-mail/data
+            - name: litestream
+              mountPath: /etc/litestream.yml
+              subPath: litestream.yml
+          envFrom: &litestreamEnvFrom
+            - prefix: LITESTREAM_
+              secretRef:
+                ## kubectl -n stalwart create secret generic litestream-s3 --from-literal=ACCESS_KEY_ID=value --from-literal=SECRET_ACCESS_KEY=value
+                name: litestream-s3
+          resources: &litestreamResources
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
         - name: mail-server-init
           image: alpine:3.19
           imagePullPolicy: IfNotPresent
@@ -96,6 +125,16 @@ spec:
               mountPath: /opt/stalwart-mail/etc/dkim
             - name: certs
               mountPath: /opt/stalwart-mail/etc/certs
+        - name: litestream
+          image: litestream/litestream:latest
+          args:
+            - replicate
+          volumeMounts: *litestreamVolumeMounts
+          envFrom: *litestreamEnvFrom
+          resources: *litestreamResources
+          ports:
+            - name: metrics
+              containerPort: 9090
       restartPolicy: Always
       volumes:
         - name: basedir
@@ -112,6 +151,9 @@ spec:
         - name: mail-data
           persistentVolumeClaim:
             claimName: mail-data
+        - name: litestream
+          configMap:
+            name: litestream
         - name: certs
           secret:
             secretName: stalwart-tls
