fix config extraction

--- a/statefulset.yaml
+++ b/statefulset.yaml
@@ -27,7 +27,8 @@ spec:
               [[ "$STALWART_TAG" == "latest" ]] && STALWART_TAG=
               STALWART_TAG=${STALWART_TAG:-$(wget https://api.github.com/repos/stalwartlabs/mail-server/releases/latest -O - | jq -r '.tag_name')}
               wget https://github.com/stalwartlabs/mail-server/raw/$STALWART_TAG/resources/config.zip
-              unzip -o config.zip spamfilter/* -d /opt/stalwart-mail/etc/
+              unzip -o config.zip config/spamfilter/* -d /opt/stalwart-mail/etc/
+              mv /opt/stalwart-mail/etc/config/* /opt/stalwart-mail/etc/
               ## Create directories
               for d in bin data/blobs logs queue reports; do
                 mkdir -p /opt/stalwart-mail/$d
